@startuml

entity "Customer" {
    *customer_id : INT
    --
    name : VARCHAR
    phone_number : VARCHAR
    email : VARCHAR
    address : VARCHAR
}

entity "Vehicle" {
    *vehicle_id : INT
    --
    vin : VARCHAR
    make : VARCHAR
    model : VARCHAR
    year : INT
    customer_id : INT
}

entity "Staff" {
    *staff_id : INT
    --
    name : VARCHAR
    role : VARCHAR
    phone_number : VARCHAR
    email : VARCHAR
}

entity "ServiceAppointment" {
    *appointment_id : INT
    --
    vehicle_id : INT
    customer_id : INT
    staff_id : INT
    appointment_date : DATE
    status : VARCHAR
    notes : TEXT
}

entity "ServiceType" {
    *service_type_id : INT
    --
    name : VARCHAR
    description : TEXT
    estimated_time_hours : INT
}

entity "ServiceDetails" {
    *service_details_id : INT
    --
    appointment_id : INT
    service_type_id : INT
    cost : DECIMAL
}

entity "Notification" {
    *notification_id : INT
    --
    customer_id : INT
    notification_date : DATETIME
    message : TEXT
    type : VARCHAR
    status : VARCHAR
}

Customer ||--o{ Vehicle : "owns"
Customer ||--o{ ServiceAppointment : "books"
Vehicle ||--o{ ServiceAppointment : "is scheduled for"
Staff ||--o{ ServiceAppointment : "handles"
ServiceAppointment ||--o{ ServiceDetails : "includes"
ServiceType ||--o{ ServiceDetails : "describes"
Customer ||--o{ Notification : "receives"

@enduml
